k8s-tf/sonar-postgres.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonar-postgres
spec:
  replicas: 1
  template:
    metadata:
      name: sonar-postgres
      labels:
        name: sonar-postgres
    spec:
      containers:
        - image: postgres:latest
          name: sonar-postgres
          ports:
            - containerPort: 5432
              name: postgresport
          volumeMounts:
            # This name must match the volumes.name below.
            - name: postgres-pvc
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: pvc-postgres
